요청 어노테이션 관련 정리 추가

--- a/memo/요청_어노테이션.md
+++ b/memo/요청_어노테이션.md
@@ -2,6 +2,8 @@
 url에 대한 파라미터를 받을 때 `@RequestParam`을 사용하는 것을 보고 내가 자주 사용하던 방식은 `@RequestBody`인데 라는 생각이 들어
 둘의 차이를 한 번 공부해 보았습니다 :)
 
+<br />
+
 # @RequestParam
 예시로 사용했던 Controller 코드를 가져와 보자면
 ```java
@@ -26,8 +28,9 @@ public Hello helloApi(@RequestParam("name") String name) {
 
 이 방식은 GET요청일 때 URL 쿼리 파라미터 `name=홍길동`을 그대로 문자열로 받아오는 방식입니다.
 
-
 반면에,`@RequestBody`는
+
+<br />
 
 # @RequestBody
 예를 들어 프론트에서 JSON 형태로 데이터를 보냈다고 가정해보면
@@ -63,6 +66,8 @@ public class MemberController {
 이 변환은 Jackson 같은 라이브러리가 해줌
 이러한 과정을 POJO 매핑이라고 부름 (JSON -> POJO 변환)
 
+<br />
+
 만약 `@RequestParam`을 여러 개 사용해야 할 경우가 있다면
  ```java
 @GetMapping("/submit")
@@ -83,8 +88,9 @@ public String submit(@ModelAttribute Member member) {
 ```
 폼 형식 데이터를 객체에 바인딩할 때 사용 (request parameter → POJO)
 
+<br />
 
-## 그렇다면 언제 어떤 것을 사용해야 할까?
+## 🤨 그렇다면 언제 어떤 것을 사용해야 할까?
 
 |상황|추천 어노테이션|
 |---|---|
